Fix custom.js - rewrite hide nav on small screen.

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -209,9 +209,9 @@ nav {
   right: 20px;
   border-radius: 5px;
   z-index: 1000;
-  width: 100px;
+  width: 50px;
   height: 50px;
-  background-color: red;
+  background-color: $color-accent-red;
   color: white;
   display: none;
 }
